--- a/ui-config-tool/src/index.html
+++ b/ui-config-tool/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>UiConfigTool</title>
+    <title>Database Tool</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
